--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,11 @@ name: Rust
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches: 
+      - 'main'
   pull_request:
-    branches: [ $default-branch ]
+    branches: 
+      - 'main'
 
 env:
   CARGO_TERM_COLOR: always
@@ -14,11 +16,13 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env: 
+      ADVENTOFCODE_ROOT: adventofcode
+
     steps:
     - uses: actions/checkout@v3
-    - run: cd adventofcode
     - name: Build
-      run: cargo build --verbose
+      run: cd $ADVENTOFCODE_ROOT && cargo build --verbose
     - name: Run tests
-      run: cargo test --verbose
+      run: cd $ADVENTOFCODE_ROOT && cargo test --verbose
 
